--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,18 @@
   .book {
     width: 100%;
   }
+  .search input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+    border: 1px solid #ccc;
+  }
+  .search input[type=text]:focus {
+    border: none;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -45,3 +57,15 @@
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 /* @media only screen and (min-width: 1200px) {...}  */
+
+.search input[type=text] {
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+
+.search input[type=text]:focus {
+  border: none;
+}
